--- a/index.html
+++ b/index.html
@@ -113,70 +113,22 @@
     <section class="section-project">
       <h1 class="section-main-title">Projects</h1>
       <div class="project-container" id="project-container">
-            <div class="card">
-              <div class="modal">
-                <div class="close"><span id="modal-close">close</span></div>
-                <h1>arielestebansoto.com</h1>
-                <div class="modal-image-container"><img src="/projects/mercado-libre-home/screenshoots/mercado-libre-home-1.png" alt="screenshoots aps"></div>
-                <div class="modal-text-container">
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                </div>
-              </div>
-              <div class="card-project"><img src="/img/project/1.jpg" alt="project image">
+            <div class="card" data-id="arielestebansoto">
+              <div class="card-project"><img src="./img/project/arielestebansoto/arielestebansoto.jpg" alt="project image">
                 <div class="card--info"><a class="card-project--title" href="/index.html">arielestebansoto.com </a><span class="card-project__info--about">click to see</span></div>
                 <div class="card-project-overlay"> </div>
                 <div class="hastaelfondo"></div>
               </div>
             </div>
-            <div class="card">
-              <div class="modal">
-                <div class="close"><span id="modal-close">close</span></div>
-                <h1>Mercado Libre Home</h1>
-                <div class="modal-image-container"><img src="/projects/mercado-libre-home/screenshoots/mercado-libre-home-1.png" alt="screenshoots aps"></div>
-                <div class="modal-text-container">
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                </div>
-              </div>
-              <div class="card-project"><img src="/img/project/mercadolibre.jpg" alt="project image">
+            <div class="card" data-id="mercadolibre">
+              <div class="card-project"><img src="./img/project/mercadolibre/mercadolibre.jpg" alt="project image">
                 <div class="card--info"><a class="card-project--title" href="/projects/mercado-libre-home/index.html">Mercado Libre Home </a><span class="card-project__info--about">click to see</span></div>
                 <div class="card-project-overlay"> </div>
                 <div class="hastaelfondo"></div>
               </div>
             </div>
-            <div class="card">
-              <div class="modal">
-                <div class="close"><span id="modal-close">close</span></div>
-                <h1>Breaking BApi</h1>
-                <div class="modal-image-container"><img src="/projects/mercado-libre-home/screenshoots/mercado-libre-home-1.png" alt="screenshoots aps"></div>
-                <div class="modal-text-container">
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
-                </div>
-              </div>
-              <div class="card-project"><img src="/img/project/breakingbad.jpg" alt="project image">
+            <div class="card" data-id="breakingbad">
+              <div class="card-project"><img src="./img/project/breakingbad/breakingbad.jpg" alt="project image">
                 <div class="card--info"><a class="card-project--title" href="/projects/breaking-bad-api/index.html">Breaking BApi </a><span class="card-project__info--about">click to see</span></div>
                 <div class="card-project-overlay"> </div>
                 <div class="hastaelfondo"></div>
@@ -184,6 +136,7 @@
             </div>
       </div>
     </section>
+    <div class="modal" id="modal"></div>
     <script src="/index.js" type="module"></script>
     <footer></footer>
   </body>
